--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
                 </ul>
             </li>
             <li class="menu-item">
+                <a href="#">Sobre</a>
+                <ul>
+                    <li><a href="#">Subitem 1</a></li>
+                    <li><a href="#">Subitem 2</a></li>
+                    <li><a href="#">Subitem 3</a></li>
+                </ul>
+            </li>
+            <li class="menu-item">
                 <a href="#">Setores</a>
                 <ul>
                     <li><a href="#">Subitem 1</a></li>
