--- a/index.html
+++ b/index.html
@@ -4,47 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Organograma Modelo</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-	<link rel = "stylesheet" href = "css/style.css"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<nav class="menu">
+    <nav class="menu">
         <ul>
-            <li class="menu-item">
-                <a href="#">Home</a>
-                <ul>
-                    <li><a href="#">Subitem 1</a></li>
-                    <li><a href="#">Subitem 2</a></li>
-                    <li><a href="#">Subitem 3</a></li>
-                </ul>
-            </li>
-            <li class="menu-item">
-                <a href="#">Sobre</a>
-                <ul>
-                    <li><a href="#">Subitem 1</a></li>
-                    <li><a href="#">Subitem 2</a></li>
-                    <li><a href="#">Subitem 3</a></li>
-                </ul>
-            </li>
-            <li class="menu-item">
-                <a href="#">Sobre</a>
-                <ul>
-                    <li><a href="#">Subitem 1</a></li>
-                    <li><a href="#">Subitem 2</a></li>
-                    <li><a href="#">Subitem 3</a></li>
-                </ul>
-            </li>
-            <li class="menu-item">
-                <a href="#">Setores</a>
-                <ul>
-                    <li><a href="#">Subitem 1</a></li>
-                    <li><a href="#">Subitem 2</a></li>
-                    <li><a href="#">Subitem 3</a></li>
-                </ul>
-            </li>
-            <li class="menu-item">
-                <a href="#">Contato</a>
-            </li>
+            <li class="menu-item"><a href="#">Home</a></li>
+            <li class="menu-item"><a href="#">Sobre</a></li>
+            <li class="menu-item"><a href="#">Setores</a></li>
+            <li class="menu-item"><a href="#">Contato</a></li>
         </ul>
     </nav>
     <div class="container">
@@ -52,73 +21,41 @@
             <ul class="tree-root">
                 <li class="tree-node">
                     <a href="#" class="node-link">
-                        <img src="images/1.jpg" alt="Child Image" class="node-image">
+                        <img src="images/1.jpg" alt="Presidente Image" class="node-image">
                         <span class="node-label">Presidente</span>
                     </a>
-					<ul class="tree-children">
-                        <li class="tree-node">
-                            <a href="#" class="node-link">
-                                <img src="images/2.jpg" alt="Manager Image" class="node-image">
-                                <span class="node-label">Vice Presidente</span>
-                            </a>
                     <ul class="tree-children">
                         <li class="tree-node">
                             <a href="#" class="node-link">
                                 <img src="images/2.jpg" alt="Manager Image" class="node-image">
-                                <span class="node-label">Coordenador</span>
+                                <span class="node-label">Gestão</span>
                             </a>
                             <ul class="tree-children">
                                 <li class="tree-node">
-                                    <a href="#" class="node-link">
-                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Funcionário</span>
-                                    </a>
-                                </li>
-                                <li class="tree-node">
-                                    <a href="#" class="node-link">
-                                        <img src="images/4.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Funcionário</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="tree-node">
-                            <a href="#" class="node-link">
-                                <img src="images/5.jpg" alt="Manager Image" class="node-image">
-                                <span class="node-label">Coordenador</span>
-                            </a>
-                            <ul class="tree-children">
-                                <li class="tree-node">
-                                    <a href="#" class="node-link">
-                                        <img src="images/6.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Funcionário</span>
-                                    </a>
-                                </li>
-                                <li class="tree-node">
-                                    <a href="#" class="node-link">
-                                        <img src="images/7.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Funcionário</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="tree-node">
-                            <a href="#" class="node-link">
-                                <img src="images/8.jpg" alt="Manager Image" class="node-image">
-                                <span class="node-label">Coordenador</span>
-                            </a>
-                            <ul class="tree-children">
-                                <li class="tree-node">
-                                    <a href="#" class="node-link">
-                                        <img src="images/9.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Funcionário</span>
-                                    </a>
-                                </li>
-                                <li class="tree-node">
-                                    <a href="#" class="node-link">
-                                        <img src="images/9.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Funcionário</span>
-                                    </a>
+                                    <div class="coordenadores">
+                                        <a href="#" class="node-link coordenador">
+                                            <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
+                                            <span class="node-label">Pamela</span>
+                                        </a>
+                                        <a href="#" class="node-link coordenador">
+                                            <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
+                                            <span class="node-label">Deisy</span>
+                                        </a>
+                                    </div>
+                                    <ul class="funcionarios">
+                                        <li class="tree-node">
+                                            <a href="#" class="node-link">
+                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                <span class="node-label">Funcionário 1</span>
+                                            </a>
+                                        </li>
+                                        <li class="tree-node">
+                                            <a href="#" class="node-link">
+                                                <img src="images/4.jpg" alt="Employee Image" class="node-image">
+                                                <span class="node-label">Funcionário 2</span>
+                                            </a>
+                                        </li>
+                                    </ul>
                                 </li>
                             </ul>
                         </li>
@@ -127,8 +64,6 @@
             </ul>
         </div>
     </div>
-</html>
-
     <script src="js/script.js"></script>
 </body>
 </html>
