upd:adicionado mais um coordenador

--- a/index.html
+++ b/index.html
@@ -35,24 +35,28 @@
                                     <div class="coordenadores">
                                         <a href="#" class="node-link coordenador">
                                             <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
-                                            <span class="node-label">Pamela</span>
+                                            <span class="node-label">Murilo</span>
                                         </a>
                                         <a href="#" class="node-link coordenador">
                                             <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
                                             <span class="node-label">Deisy</span>
+                                        </a>
+                                        <a href="#" class="node-link coordenador">
+                                            <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
+                                            <span class="node-label">Pamela</span>
                                         </a>
                                     </div>
                                     <ul class="funcionarios">
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
                                                 <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Funcionário 1</span>
+                                                <span class="node-label">Servidores 1</span>
                                             </a>
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
                                                 <img src="images/4.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Funcionário 2</span>
+                                                <span class="node-label">Servidores 2</span>
                                             </a>
                                         </li>
                                     </ul>
