mod: troca do nome do cargo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li class="tree-node">
                     <a href="#" class="node-link">
                         <img src="images/1.jpg" alt="Presidente Image" class="node-image">
-                        <span class="node-label">Presidente</span>
+                        <span class="node-label">Diretor:Murilo</span>
                     </a>
                     <ul class="tree-children">
                         <li class="tree-node">
