--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li class="tree-node">
                     <a href="#" class="node-link">
                         <img src="images/1.jpg" alt="Presidente Image" class="node-image">
-                        <span class="node-label">Diretor:Murilo</span>
+                        <span class="node-label">Diretor:Murilo</span> <!--Arrumar o quadrado para aparecer os juntos-->
                     </a>
                     <ul class="tree-children">
                         <li class="tree-node">
@@ -33,10 +33,6 @@
                             <ul class="tree-children">
                                 <li class="tree-node">
                                     <div class="coordenadores">
-                                        <a href="#" class="node-link coordenador">
-                                            <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
-                                            <span class="node-label">Murilo</span>
-                                        </a>
                                         <a href="#" class="node-link coordenador">
                                             <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
                                             <span class="node-label">Deisy</span>
