mod: quat. de servidores

--- a/index.html
+++ b/index.html
@@ -55,18 +55,30 @@
                                                 <span class="node-label">Servidores 2</span>
                                             </a>
                                         </li>
-                                    </ul>
-                                    <ul class="funcionarios">
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
                                                 <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">Servidores 3</span>
                                             </a>
                                         </li>
+                                    </ul>
+                                    <ul class="funcionarios"> <!--Talvez alterar o nome da class para não confundir com a outra-->
+                                        <li class="tree-node">
+                                            <a href="#" class="node-link">
+                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                <span class="node-label">Servidores 4</span>
+                                            </a>
+                                        </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
                                                 <img src="images/4.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Servidores 4</span>
+                                                <span class="node-label">Servidores 5</span>
+                                            </a>
+                                        </li>
+                                        <li class="tree-node">
+                                            <a href="#" class="node-link">
+                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                <span class="node-label">Servidores 6</span>
                                             </a>
                                         </li>
                                     </ul>
