--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
                                                 <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Servidores 1</span>
+                                                <span class="node-label">ALINE</span> <!--cuida do trâmite, sem estágiario-->
                                             </a>
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
                                                 <img src="images/4.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Servidores 2</span>
+                                                <span class="node-label">ODAIR</span> <!--cuida da agricultura e incra, sem estagiario-->
                                             </a>
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
                                                 <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Servidores 3</span>
+                                                <span class="node-label">WANDER</span> <!--cuida da agricultura, sem estagiario-->
                                             </a>
                                         </li>
                                     </ul>
@@ -79,6 +79,7 @@
                                             <a href="#" class="node-link">
                                                 <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">Servidores 6</span>
+                                                
                                             </a>
                                         </li>
                                     </ul>
