mod: Alteração do nome dos servidores

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li class="tree-node">
                     <a href="#" class="node-link">
                         <img src="images/1.jpg" alt="Presidente Image" class="node-image">
-                        <span class="node-label">Diretor:Murilo</span> <!--Arrumar o quadrado para aparecer os juntos-->
+                        <span class="node-label">Diretor:Murilo</span> <!--Arrumar o quadrado para aparecer junto-->
                     </a>
                     <ul class="tree-children">
                         <li class="tree-node">
@@ -46,19 +46,19 @@
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
                                                 <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">ALINE</span> <!--cuida do trâmite, sem estágiario-->
+                                                <span class="node-label">ALINE</span> <!--sem estágiario-->
                                             </a>
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
                                                 <img src="images/4.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">ODAIR</span> <!--cuida da agricultura e incra, sem estagiario-->
+                                                <span class="node-label">ODAIR</span> <!--sem estagiario-->
                                             </a>
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
                                                 <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">WANDER</span> <!--cuida da agricultura, sem estagiario-->
+                                                <span class="node-label">WANDER</span> <!--sem estagiario-->
                                             </a>
                                         </li>
                                     </ul>
@@ -66,19 +66,19 @@
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
                                                 <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Servidores 4</span>
+                                                <span class="node-label">BARBARA</span>
                                             </a>
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
                                                 <img src="images/4.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Servidores 5</span>
+                                                <span class="node-label">PAMELA FLORIANO</span>
                                             </a>
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
                                                 <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Servidores 6</span>
+                                                <span class="node-label">ELSA</span> <!--sem estágiario-->
                                                 
                                             </a>
                                         </li>
