--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
                                                 <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">BARBARA</span>
+                                                <span class="node-label">DEBORA</span> <!--sem estágiario-->
                                             </a>
                                         </li>
                                         <li class="tree-node">
@@ -78,11 +78,11 @@
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
                                                 <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">ELSA</span> <!--sem estágiario-->
+                                                <span class="node-label">BARBARA</span> 
                                                 
                                             </a>
                                         </li>
-                                    </ul>
+                                    </ul>        
                                 </li>
                             </ul>
                         </li>
