mod: alteração dos servidores

--- a/index.html
+++ b/index.html
@@ -51,8 +51,14 @@
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
+                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                <span class="node-label">DEBORA</span> <!--sem estágiario-->
+                                            </a>
+                                        </li>
+                                        <li class="tree-node">
+                                            <a href="#" class="node-link">
                                                 <img src="images/4.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">ODAIR</span> <!--sem estagiario-->
+                                                <span class="node-label">ODAIR </span> <!--sem estagiario-->  
                                             </a>
                                         </li>
                                         <li class="tree-node">
@@ -62,13 +68,7 @@
                                             </a>
                                         </li>
                                     </ul>
-                                    <ul class="funcionarios"> <!--Talvez alterar o nome da class para não confundir com a outra-->
-                                        <li class="tree-node">
-                                            <a href="#" class="node-link">
-                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">DEBORA</span> <!--sem estágiario-->
-                                            </a>
-                                        </li>
+                                    <ul class="funcionarios"> <!--Alterar o nome da class para não confundir com a outra-->
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
                                                 <img src="images/4.jpg" alt="Employee Image" class="node-image">
@@ -79,7 +79,6 @@
                                             <a href="#" class="node-link">
                                                 <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">BARBARA</span> 
-                                                
                                             </a>
                                         </li>
                                     </ul>        
