--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li class="tree-node">
                     <a href="#" class="node-link">
                         <img src="images/1.jpg" alt="Presidente Image" class="node-image">
-                        <span class="node-label">Diretor:Murilo</span> <!--Arrumar o quadrado para aparecer junto-->
+                        <span class="node-label">Diretor: Murilo</span>
                     </a>
                     <ul class="tree-children">
                         <li class="tree-node">
@@ -46,40 +46,30 @@
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
                                                 <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">ALINE</span> <!--sem estágiario-->
-                                            </a>
-                                        </li>
-                                        <li class="tree-node">
-                                            <a href="#" class="node-link">
-                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">DEBORA</span> <!--sem estágiario-->
+                                                <span class="node-label">Funcionário</span>
                                             </a>
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
                                                 <img src="images/4.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">ODAIR </span> <!--sem estagiario-->  
+                                                <span class="node-label">Funcionário</span>
                                             </a>
                                         </li>
-                                        <li class="tree-node">
-                                            <a href="#" class="node-link">
-                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">WANDER</span> <!--sem estagiario-->
-                                            </a>
-                                        </li>
+                                            <li class="tree-node">
+                                                <a href="#" class="node-link">
+                                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                    <span class="node-label">Funcionário</span>
+                                                </a>
+                                            </li>
+                                            <li class="tree-node">
+                                                <a href="#" class="node-link">
+                                                    <img src="images/4.jpg" alt="Employee Image" class="node-image">
+                                                    <span class="node-label">Funcionário</span>
+                                                </a>
+                                            </li>
+                                        </ul>
                                     </ul>
-                                    <ul class="funcionarios"> <!--Alterar o nome da class para não confundir com a outra-->
-                                        <li class="tree-node">
-                                            <a href="#" class="node-link">
-                                                <img src="images/4.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">PAMELA FLORIANO</span>
-                                            </a>
-                                        </li>
-                                        <li class="tree-node">
-                                            <a href="#" class="node-link">
-                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">BARBARA</span> 
-                                            </a>
+                                    
                                         </li>
                                     </ul>        
                                 </li>
