--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                                     <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
                                     <span class="node-label">Pamela</span>
                                 </a>
+                                <div class="vertical-line"></div>
                             </div>
                             <ul class="tree-children">
                                 <li class="tree-node">
