mod: estagiarios da gestão

--- a/index.html
+++ b/index.html
@@ -29,21 +29,43 @@
                     </a>
                     <ul class="tree-children">
                         <li class="tree-node">
-                            <a href="#" class="node-link setor">
+                            <a href="#" class="node-link setor" id="gestao-link">
                                 <img src="images/2.jpg" alt="Setor Image" class="node-image">
                                 <span class="node-label">Gestão</span>
                             </a>
-                            <div class="coordenadores">
-                                <a href="#" class="node-link coordenador">
-                                    <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
-                                    <span class="node-label">Deisy</span>
-                                </a>
-                                <a href="#" class="node-link coordenador">
-                                    <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
-                                    <span class="node-label">Pamela</span>
-                                </a>
-                                <div class="vertical-line"></div>
-                            </div>
+                            <ul class="tree-children">
+                                <li class="tree-node coordenadores">
+                                    <a href="#" class="node-link coordenador">
+                                        <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
+                                        <span class="node-label">Deisy</span>
+                                    </a>
+                                    <a href="#" class="node-link coordenador">
+                                        <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
+                                        <span class="node-label">Pamela</span>
+                                    </a>
+                                    <div class="vertical-line"></div>
+                                </li>
+                            </ul>
+                            <ul class="gestao-estagiarios" id="gestao-estagiarios">
+                                <li class="tree-node">
+                                    <a href="#" class="node-link funcionario">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Funcionario 1</span>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link funcionario">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Funcionario 2</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                    
+                            </ul>
+                        </li>
+                    </ul>
                             <ul class="tree-children">
                                 <li class="tree-node">
                                     <a href="#" class="node-link setor">
