mod: setores gerais

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 <li class="tree-node">
                     <a href="#" class="node-link">
                         <img src="imagens/murilo.jpg" alt="Presidente Image" class="node-image">
-                        <span class="node-label">Diretor Murilo</span>
+                        <span class="node-label">Murilo</span>
+                        <p class="node-label-cargo">DIRETOR</p>
                     </a>
                     <ul class="tree-children">
                         <li class="tree-node">
@@ -41,12 +42,14 @@
                                     <a href="#" class="node-link coordenador">
                                         <img src="imagens/deisy.jpg" alt="Coordenador Image" class="node-image">
                                         <span class="node-label">Deisy</span>
+                                        <p class="node-label-cargo">SERVIDORA</p>
                                     </a>
                                 </li>
                                 <li class="tree-node">
                                     <a href="#" class="node-link coordenador">
                                         <img src="imagens/pamela longo.jpg" alt="Coordenador Image" class="node-image">
                                         <span class="node-label">Pamela</span>
+                                        <p class="node-label-cargo">SERVIDORA</p>
                                     </a>
                                 </li>
                             </ul>
@@ -83,45 +86,26 @@
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
                         <img src="images/2.jpg" alt="Setor Image" class="node-image">
-                        <span class="node-label">Receita Federal</span>
+                        <span class="node-label">Receita Federal & Junta Militar</span>
                     </a>
-                    <ul class="funcionarios">
+                    <ul class="coordenadores">
                         <li class="tree-node">
-                            <a href="#" class="node-link funcionario">
-                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                <span class="node-label">Funcionario 1</span>
+                            <a href="#" class="node-link coordenador">
+                                <img src="imagens/joão marcelo.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">João</span>
+                                <p class="node-label-cargo">SERVIDOR</p>
                             </a>
-                            <ul class="sub-funcionarios">
+                            <ul class="funcionarios">
                                 <li class="tree-node">
                                     <a href="#" class="node-link">
                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Sub-Funcionario 1</span>
+                                        <span class="node-label">Estagiário</span>
                                     </a>
                                 </li>
                                 <li class="tree-node">
                                     <a href="#" class="node-link">
                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Sub-Funcionario 2</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="tree-node">
-                            <a href="#" class="node-link funcionario funcionario-multisetor">
-                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                <span class="node-label">Funcionario 2</span>
-                            </a>
-                            <ul class="sub-funcionarios">
-                                <li class="tree-node">
-                                    <a href="#" class="node-link">
-                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Sub-Funcionario 3</span>
-                                    </a>
-                                </li>
-                                <li class="tree-node">
-                                    <a href="#" class="node-link">
-                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Sub-Funcionario 4</span>
+                                        <span class="node-label">Estagiário</span>
                                     </a>
                                 </li>
                             </ul>
@@ -138,6 +122,7 @@
                             <a href="#" class="node-link coordenador">
                                 <img src="imagens/chantelli.jpg" alt="Coordenador Image" class="node-image">
                                 <span class="node-label">Chantelli</span>
+                                <p class="node-label-cargo">SERVIDORA</p>
                             </a>
                             <ul class="funcionarios">
                                 <li class="tree-node">
@@ -150,6 +135,7 @@
                                             <a href="#" class="node-link">
                                                 <img src="imagens/monalisa.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">Monalisa</span>
+                                                <p class="node-label-cargo">SERVIDORA</p>
                                             </a>
                                             <ul class="sub-sub-funcionarios">
                                                 <li class="tree-node">
@@ -193,6 +179,7 @@
                                     <a href="#" class="node-link">
                                         <img src="imagens/francisca.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">Francisca</span>
+                                        <p class="node-label-cargo">SERVIDORA</p>
                                     </a>
                                 </li>
                             </ul>
@@ -206,46 +193,54 @@
                     <img src="images/2.jpg" alt="Setor Image" class="node-image">
                     <span class="node-label">Unidade de Conciliação</span>
                 </a>
-                <ul class="funcionarios">
+                <ul class="coordenadores">
                     <li class="tree-node">
-                        <a href="#" class="node-link funcionario">
-                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                            <span class="node-label">Funcionario 2</span>
+                        <a href="#" class="node-link coordenador">
+                            <img src="imagens/silvana.jpg" alt="Coordenador Image" class="node-image">
+                            <span class="node-label">Silvana</span>
+                            <p class="node-label-cargo">SERVIDORA</p>
                         </a>
-                        <ul class="sub-funcionarios">
+                        <ul class="funcionarios">
                             <li class="tree-node">
                                 <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                    <span class="node-label">Sub-Funcionario 5</span>
+                                    <img src="imagens/josé.jpg" alt="Employee Image" class="node-image">
+                                    <span class="node-label">José Davi</span>
+                                    <p class="node-label-cargo">SERVIDOR</p>
                                 </a>
-                            </li>
-                            <li class="tree-node">
-                                <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                    <span class="node-label">Sub-Funcionario 6</span>
-                                </a>
+                                <ul class="sub-sub-funcionarios">
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Estagiário</span>
+                                        </a>
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Estagiário</span>
+                                        </a>
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Estagiário</span>
+                                        </a>
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Estagiário</span>
+                                        </a>
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Estagiário</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                           
                             </li>
                         </ul>
                     </li>
-                    <li class="tree-node">
-                        <a href="#" class="node-link funcionario">
-                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                            <span class="node-label">Funcionario 4</span>
-                        </a>
-                        <ul class="sub-funcionarios">
-                            <li class="tree-node">
-                                <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                    <span class="node-label">Sub-Funcionario 7</span>
-                                </a>
-                            </li>
-                            <li class="tree-node">
-                                <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                    <span class="node-label">Sub-Funcionario 8</span>
-                                </a>
-                            </li>
-                        </ul>
+
+                    
                     </li>
                 </ul>
             </li>
