mod: nome-estagiarios-ID

--- a/index.html
+++ b/index.html
@@ -141,27 +141,51 @@
                                                 <li class="tree-node">
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                        <span class="node-label">Estagiário</span>
+                                                        <span class="node-label">Alana</span>
                                                     </a>
                                                 <li class="tree-node">
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                        <span class="node-label">Estagiário</span>
+                                                        <span class="node-label">Thais</span>
                                                     </a>
                                                 <li class="tree-node">
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                        <span class="node-label">Estagiário</span>
+                                                        <span class="node-label">Caroline</span>
                                                     </a>
                                                 <li class="tree-node">
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                        <span class="node-label">Estagiário</span>
+                                                        <span class="node-label">Fernando</span>
                                                     </a>
                                                 <li class="tree-node">
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                        <span class="node-label">Estagiário</span>
+                                                        <span class="node-label">Cristopher</span>
+                                                    </a>
+                                                </li>
+                                                <li class="tree-node">
+                                                    <a href="#" class="node-link">
+                                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                        <span class="node-label">Gabriela</span>
+                                                    </a>
+                                                </li>
+                                                <li class="tree-node">
+                                                    <a href="#" class="node-link">
+                                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                        <span class="node-label">Dandara</span>
+                                                    </a>
+                                                </li>
+                                                <li class="tree-node">
+                                                    <a href="#" class="node-link">
+                                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                        <span class="node-label">Jennifer</span>
+                                                    </a>
+                                                </li>
+                                                <li class="tree-node">
+                                                    <a href="#" class="node-link">
+                                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                        <span class="node-label">Francine</span>
                                                     </a>
                                                 </li>
                                             </ul>
